--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "react": "^16.5.2",
     "react-countdown-now": "^1.3.0",
     "react-dom": "^16.5.2",
-    "react-scripts": "2.0.5"
+    "react-scripts": "2.0.5",
+    "styled-components": "^3.4.10"
   },
   "scripts": {
     "start": "react-scripts start",
